@@ -3,7 +3,6 @@ HW and SW filters settings in the same place
 User can type any aspect ratio and zoom
 Handle auto channels/samplerate change
 Improve handle video size change
-Improve opening enqueuing files
 Video preview on progress bar
 Improve radio stations
 YouTube playlists
